--- a/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/project/projectmain.xhtml
+++ b/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/project/projectmain.xhtml
@@ -477,7 +477,7 @@
         </b:cell>
         <b:cell x="6" y="2">
             <b:textarea
-                    value="#{projectBackingBean.data.newFirstContactName2}"
+                    value="#{projectBackingBean.data.newFirstContactComment}"
                     id="kommentar_neuer_kontakt"/>
         </b:cell>
         <b:cell x="7" y="2" valign="middle">
